# shootify-content-sentinel

./: .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json
providers/: IcpProvider.tsx  icp_service.py
src/authAI_backend/: Cargo.toml  authAI_backend.did
src/authAI_backend/src/: lib.rs
src/authAI_frontend/: index.html  package.json  vite.config.js
src/authAI_frontend/src/: App.js
src/sentinel_dashboard_backend/: Cargo.toml  sentinel_dashboard_backend.did
src/sentinel_dashboard_backend/src/: lib.rs
