[package]
name = "sentinel_dashboard_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
ic-cdk-timers = "0.10"
ic-stable-structures = "0.6"